# cleverdict

./: .flake8  .gitignore  LICENSE  MANIFEST  README.md  __init__.py  cleverdict.pptx  pyproject.toml  setup - old.py  setup.cfg  setup.py  test.txt  test_cleverdict.py
.github/workflows/: python-ci.yml  python-test.yml
cleverdict/: __init__.py  __main__.py  cleverdict.py  setup.py  test_cleverdict.py
cleverdict.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cleverdict/cleverdict.egg-info/: PKG-INFO
requirements/: codestyle.txt
resources/: mydata.json
