[metadata]
name = cleverdict
version = attr: cleverdict.__version__
license = MIT
description = A JSON-friendly data structure which allows both object attributes and dictionary keys and values to be used simultaneously and interchangeably.
long_description = file: README.md
long_description_content_type = text/markdown
author = Peter Fison
author_email = peter@awsom.solutions
url = https://github.com/PFython/cleverdict
download_url = https://github.com/PFython/cleverdict/releases
keywords =
    cleverdict
    data
    attribute
    key
    JSON
    autosave
    autodelete
    to_json
    from_json
    to_lines
    from_lines
    to_list
    from_list
    value
    attributes
    keys
    values
    database
    utility
    tool
    clever
    dictionary
    att
    __getattr__
    __setattr__
    getattr
    setattr

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Object Brokering
    Topic :: System :: Logging, Topic :: Utilities
    License :: OSI Approved :: MIT License

[options]
packages = find:
include-package-data = True
python_requires = >= 3.6
# install_requires =

# [options.package_data]
# cleverdict = py.typed

# [options.extras_require]
# dev =
#     black
#     flake8
#     mypy
#     setuptools>=46.4.0
#     types-setuptools

# [isort]
# profile = black

# [flake8]
# indent-size = 4
# max-line-length = 88
# extend-ignore = W605

# [mypy]
# python_version = 3.9
# show_error_codes = True
# pretty = True
# strict = True
